// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenu renders when logged in 1`] = `
<Menu
  className="__HeaderMenu__"
  mode="horizontal"
  selectable={false}
  theme="dark"
>
  <SubMenu
    key="help"
    popupClassName="header-submenu"
    title="Help"
  >
    <MenuItem
      key="help.search-tips"
    >
      <ExternalLink
        as="a"
        href="https://inspirehep.net/help/knowledge-base/inspire-paper-search"
      >
        Search Tips
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="help.tour"
    >
      <Connect(LinkLikeButton)>
        Take the tour
      </Connect(LinkLikeButton)>
    </MenuItem>
    <MenuItem
      key="help.help-center"
    >
      <ExternalLink
        as="a"
        href="https://inspirehep.net/help"
      >
        Help Center
      </ExternalLink>
    </MenuItem>
  </SubMenu>
  <SubMenu
    key="submit"
    popupClassName="header-submenu"
    title="Submit"
  >
    <MenuItem
      key="submit.author"
    >
      <Link
        to="/submissions/authors"
      >
        Author
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.job"
    >
      <Link
        to="/submissions/jobs"
      >
        Job
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.literature"
    >
      <Link
        to="/submissions/literature"
      >
        Literature
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.conference"
    >
      <Link
        to="/submissions/conferences"
      >
        Conference
      </Link>
    </MenuItem>
  </SubMenu>
  <MenuItem
    key="login-logout"
  >
    <LinkLikeButton
      dataTestId="logout"
      onClick={[MockFunction]}
    >
      Logout
    </LinkLikeButton>
  </MenuItem>
</Menu>
`;

exports[`HeaderMenu renders when not logged in 1`] = `
<Menu
  className="__HeaderMenu__"
  mode="horizontal"
  selectable={false}
  theme="dark"
>
  <SubMenu
    key="help"
    popupClassName="header-submenu"
    title="Help"
  >
    <MenuItem
      key="help.search-tips"
    >
      <ExternalLink
        as="a"
        href="https://inspirehep.net/help/knowledge-base/inspire-paper-search"
      >
        Search Tips
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="help.tour"
    >
      <Connect(LinkLikeButton)>
        Take the tour
      </Connect(LinkLikeButton)>
    </MenuItem>
    <MenuItem
      key="help.help-center"
    >
      <ExternalLink
        as="a"
        href="https://inspirehep.net/help"
      >
        Help Center
      </ExternalLink>
    </MenuItem>
  </SubMenu>
  <SubMenu
    key="submit"
    popupClassName="header-submenu"
    title="Submit"
  >
    <MenuItem
      key="submit.author"
    >
      <Link
        to="/submissions/authors"
      >
        Author
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.job"
    >
      <Link
        to="/submissions/jobs"
      >
        Job
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.literature"
    >
      <Link
        to="/submissions/literature"
      >
        Literature
      </Link>
    </MenuItem>
    <MenuItem
      key="submit.conference"
    >
      <Link
        to="/submissions/conferences"
      >
        Conference
      </Link>
    </MenuItem>
  </SubMenu>
  <MenuItem
    key="login-logout"
  >
    <Link
      to="/user/login"
    >
      Login
    </Link>
  </MenuItem>
</Menu>
`;
